--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "https://westcorkbjj.com/",
   "main": "./src/Main.elm",
   "scripts": {
-    "build":
-      "mkdir -p public && elm-static-html -f ./src/Main.elm -o ./public/index.html && sed -i '1s/^/<!DOCTYPE html>\\n/' ./public/index.html",
+    "build": "mkdir -p public && elm-static-html -f ./src/Main.elm -o ./public/index.html && sed -i '1s/^/<!DOCTYPE html>\\n/' ./public/index.html",
     "watch": "mkdir -p public && nodemon -e elm -x 'npm run build'"
   },
   "repository": {
@@ -19,6 +18,7 @@
   },
   "homepage": "https://westcorkbjj.com/",
   "dependencies": {
+    "elm": "^0.18.0",
     "elm-static-html": "^1.3.2"
   },
   "devDependencies": {
